# obsessive_peek

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: bench_main.rs
benches/benchmarks/: mod.rs  std_peekmore.rs
examples/: hello_peek.rs  obsessive_peek_hello.rs
src/: lib.rs  peek_iterator.rs  peekerror.rs  peekmore.rs
tests/: basic_functionality.rs  check_advance.rs  consume_operations.rs  cursor_operations.rs  divide_conquer_optimizations.rs  peek_operations.rs  range_operations.rs
